fix: align mem without pos abs LANG=en_EN date +'(%a, %b %d, %Y %r)'

--- a/cssMemSlider/styles/laptop.css
+++ b/cssMemSlider/styles/laptop.css
@@ -13,16 +13,22 @@ body {
 #slider-wrapper {
     width: 50vw;
     height: 50vh;
+    padding: 1rem;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
     background-color: var(--bg-color);
 }
 
 #slider {
-    position: relative;
-    height: -webkit-fill-available;
-    margin: 1rem;
+    height: 80%;
+    width: 100%;
     padding: 0;
+    display: flex;
+    justify-content: center;
     border-width: 0;
     overflow: hidden;
+    order: -1;
 }
 
 .without-money {
@@ -51,29 +57,26 @@ body {
 
 /* mem styles */
 .slide-img {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 70%;
-    width: 70%;
+    height: 45vh;
+    width: 45vw;
+    display: none;
     background-color: var(--bg-color);
     background-repeat: no-repeat;
     background-size: contain;
-    z-index: 0;
+    background-position: center;
+    opacity: 0;
 }
 
-.slide:checked + .slide-img {
-    z-index: 1;
+#without-money:checked ~ #slider .slide-img.without-money {
+    display: block;
     animation-name: mem-flip;
     animation-duration: 500ms;
     animation-timing-function: ease-out;
+    opacity: 1;
 }
 
 /* mem note styles*/
 .slide-text {
-    position: absolute;
-    bottom: 0;
-    margin: 0;
     width: 65%;
     height: 3rem;
     display: flex;
@@ -85,9 +88,6 @@ body {
     font-size: 1.2em;
     line-height: 1.5;
     z-index: 0;
-}
-.slide-text span {
-    position: relative;
 }
 
 .slide:checked + .slide-img + .slide-text {
@@ -101,9 +101,6 @@ body {
 
 /* controls */
 .custom-control {
-    position: absolute;
-    right: 0;
-    bottom: 0;
     width: 2rem;
     height: 2rem;
     display: flex;
@@ -136,12 +133,12 @@ body {
     background-color: var(--btn-hovered-color);
 }
 
-.slide:checked + .slide-img + .slide-text + .custom-control .radio-btn {
+.slide:checked + .custom-control .radio-btn {
     border: 0.2rem solid var(--btn-color);
     background-color: var(--bg-color);
 }
 
-.slide:checked + .slide-img + .slide-text + .custom-control:hover .radio-btn {
+.slide:checked + .custom-control:hover .radio-btn {
     border: 0.2rem solid var(--btn-hovered-color);
     background-color: var(--bg-color);
 }
